[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/RubikItalicSmallest.tres" type="DynamicFont" id=2]
[ext_resource path="res://components/item_base/set_summary.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/icon_module.svg" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 1
border_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="SetSummary" type="PanelContainer"]
margin_right = 700.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 68.0
custom_constants/separation = 8
alignment = 1

[node name="Top" type="HBoxContainer" parent="Container"]
margin_right = 684.0
margin_bottom = 60.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="HBoxContainer" parent="Container/Top"]
margin_right = 684.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="Labels" type="VBoxContainer" parent="Container/Top/Text"]
margin_right = 684.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Headline" type="Label" parent="Container/Top/Text/Labels"]
modulate = Color( 0.666667, 0.666667, 0.666667, 1 )
margin_top = 4.0
margin_right = 684.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "T_RARITY_SET"
uppercase = true

[node name="Name" type="Label" parent="Container/Top/Text/Labels"]
margin_top = 26.0
margin_right = 684.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Talion"
autowrap = true

[node name="TextureRect" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 512.0
margin_right = 552.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "1"
align = 2

[node name="TextureRect2" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 556.0
margin_right = 596.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "2"
align = 2

[node name="TextureRect3" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 600.0
margin_right = 640.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "3"
align = 2

[node name="TextureRect4" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 644.0
margin_right = 684.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect4"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "4"
align = 2

[node name="TextureRect5" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 556.0
margin_right = 596.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect5"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "5"
align = 2

[node name="TextureRect6" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 600.0
margin_right = 640.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect6"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "6"
align = 2

[node name="TextureRect7" type="TextureRect" parent="Container/Top/Text"]
visible = false
margin_left = 644.0
margin_right = 684.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Container/Top/Text/TextureRect7"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_right = 4.0
margin_bottom = 29.0
rect_scale = Vector2( 0.6, 0.6 )
text = "7"
align = 2
